fixed style of opening days to align when larger screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -202,7 +202,7 @@ table {
 }
 
 .form-control {
-  margin-bottom: 1px;
+  margin-bottom: 2px;
 }
 
 .info {
@@ -262,4 +262,9 @@ div#confirmation p {
   text-align: center;
   padding-left: 10px;
   padding-right: 10px;
+}
+
+@media only screen and (min-width: 740px) {
+  /* For large screens: */
+ .opening-hours {margin-top: 52px;}
 }
